crates/llvmkit-ir/tests/compile_fail/typed_pipeline_cross_brand.stderr
error[E0521]: borrowed data escapes outside of closure
  --> tests/compile_fail/typed_pipeline_cross_brand.rs:48:21
   |
41 |         let left_verified = left.verify().unwrap();
   |             ------------- `left_verified` declared here, outside of the closure body
42 |
43 |         Module::with_new::<_, _, _>("right", |right| {
   |                                               ----- `right` is a reference that is only valid in the closure body
...
48 |             let _ = pipe.run(left_verified, left_function, &mut right_fam);
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `right` escapes the closure body here
   |
   = note: requirement occurs because of the type `Module<'_, Brand<'_>, Verified>`, which makes the generic argument `Brand<'_>` invariant
   = note: the struct `Module<'ctx, B, S>` is invariant over the parameter `B`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error[E0521]: borrowed data escapes outside of closure
  --> tests/compile_fail/typed_pipeline_cross_brand.rs:44:45
   |
32 |     Module::with_new::<_, _, _>("left", |left| {
   |                                          ----
   |                                          |
   |                                          `left` is a reference that is only valid in the closure body
   |                                          has type `Module<'1>`
...
44 |             let mut right_fam = manager_for(right.as_view());
   |                                             ^^^^^^^^^^^^^^^
   |                                             |
   |                                             `left` escapes the closure body here
   |                                             argument requires that `'1` must outlive `'static`
